tests/neg/semantic_file_read_bad_types.baa
// EXPECT: نوع المعامل 1 في 'اقرأ_ملف' غير متوافق

صحيح الرئيسية() {
    ص٨ مخزن[٤] = {}.
    صحيح ن = اقرأ_ملف(١, مخزن, ٤).
    إرجع ن.
}

